--- a/package.json
+++ b/package.json
@@ -10,27 +10,23 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.0.2",
-    "preact": "^10.10.1"
+    "@maneren/utils": "^6.6.0",
+    "@tauri-apps/api": "^1.2.0",
+    "preact": "^10.11.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
+    "@babel/core": "^7.20.12",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
-    "@babel/plugin-syntax-decorators": "^7.18.6",
+    "@babel/plugin-syntax-decorators": "^7.19.0",
     "@babel/plugin-syntax-jsx": "^7.18.6",
-    "@preact/preset-vite": "^2.3.0",
-    "@tauri-apps/cli": "^1.0.5",
-    "@thecodejs/eslint-config-react-ts": "^0.0.3",
-    "@types/node": "^18.7.14",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^7.32.0",
-    "eslint-config-preact": "^1.3.0",
-    "jest": "^29.0.1",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9"
+    "@preact/preset-vite": "^2.5.0",
+    "@tauri-apps/cli": "^1.2.3",
+    "@types/node": "^18.11.18",
+    "autoprefixer": "^10.4.13",
+    "jest": "^29.4.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.5",
+    "vite": "^4.0.4"
   }
 }
